--- a/index.html
+++ b/index.html
@@ -2,20 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>View Dropbox PDF</title>
-    <style>
-        body, html {
-            margin: 0; padding: 0; height: 100%;
-        }
-        iframe {
-            width: 100%;
-            height: 100vh;
-            border: none;
-        }
-    </style>
+    <title>Open Dropbox PDF</title>
 </head>
 <body>
-    <iframe src="https://dl.dropboxusercontent.com/scl/fi/2goyqcrf89naxph228hra/JVportfolio.pdf" allowfullscreen></iframe>
+    <a href="https://dl.dropboxusercontent.com/scl/fi/2goyqcrf89naxph228hra/JVportfolio.pdf" target="_blank" rel="noopener noreferrer">
+        Open PDF in a new tab
+    </a>
 </body>
 </html>
