--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>Open Dropbox PDF</title>
 </head>
-<body>
+<body?
     <a href="https://dl.dropboxusercontent.com/scl/fi/2goyqcrf89naxph228hra/JVportfolio.pdf" target="_blank" rel="noopener noreferrer">
         Open PDF in a new tab
     </a>
