--- a/index.html
+++ b/index.html
@@ -3,15 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jiya Vegad PDF-Style Gallery</title>
+    <title>Jiya Vegad</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <!-- Stylish Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Inter', sans-serif;
-            background-color: #f0f2f5;
+            background-color: #000; /* black background to avoid white sides */
             margin: 0;
             padding: 0;
+            color: white;
+        }
+        header {
+            font-family: 'Playfair Display', serif;
         }
         .image-container {
             display: flex;
@@ -20,34 +25,68 @@
             padding: 20px 0;
         }
         .image-container img {
-            max-width: 90%;
+            max-width: 100%;
             height: auto;
             margin-bottom: 20px;
-            background-color: #e5e7eb; /* light gray before load */
+            background-color: #111;
             border-radius: 8px;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+            box-shadow: 0 4px 12px rgba(0,0,0,0.4);
+        }
+        #toTopBtn {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background: #444;
+            color: white;
+            border: none;
+            padding: 10px 15px;
+            border-radius: 50%;
+            cursor: pointer;
+            font-size: 18px;
+            display: none;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+        }
+        #counter {
+            position: fixed;
+            top: 15px;
+            right: 20px;
+            background: rgba(0,0,0,0.7);
+            padding: 5px 10px;
+            border-radius: 5px;
+            font-size: 14px;
         }
     </style>
 </head>
 <body>
-    <h1 class="text-2xl font-bold text-center py-6 bg-white shadow">Jiya Vegad's PDF Style Viewer</h1>
+    <!-- Header -->
+    <header class="text-center text-4xl font-bold py-6 bg-black shadow-lg">Jiya Vegad</header>
+
+    <!-- Page counter -->
+    <div id="counter">1 of 52</div>
+
+    <!-- Image container -->
     <div id="gallery" class="image-container"></div>
+
+    <!-- Go to Top Button -->
+    <button id="toTopBtn">&#8679;</button>
 
     <script>
         const totalImages = 52;
         const basePath = './'; // Change if needed
         const gallery = document.getElementById('gallery');
+        const counter = document.getElementById('counter');
+        const toTopBtn = document.getElementById('toTopBtn');
 
-        // Create image placeholders for lazy loading
+        // Create image placeholders
         for (let i = 1; i <= totalImages; i++) {
             const img = document.createElement('img');
             img.dataset.src = `${basePath}img${i}.png`;
             img.alt = `Image ${i}`;
-            img.loading = 'lazy'; // native lazy loading
+            img.loading = 'lazy';
             gallery.appendChild(img);
         }
 
-        // Intersection Observer to load images when near viewport
+        // Lazy load
         const lazyLoad = (entries, observer) => {
             entries.forEach(entry => {
                 if (entry.isIntersecting) {
@@ -59,10 +98,31 @@
         };
 
         const observer = new IntersectionObserver(lazyLoad, {
-            rootMargin: '300px' // load a bit early for smoothness
+            rootMargin: '300px'
         });
 
         document.querySelectorAll('img').forEach(img => observer.observe(img));
+
+        // Update page counter on scroll
+        window.addEventListener('scroll', () => {
+            const imgs = document.querySelectorAll('img');
+            let currentPage = 1;
+            imgs.forEach((img, index) => {
+                const rect = img.getBoundingClientRect();
+                if (rect.top <= window.innerHeight / 2 && rect.bottom >= window.innerHeight / 2) {
+                    currentPage = index + 1;
+                }
+            });
+            counter.textContent = `${currentPage} of ${totalImages}`;
+
+            // Show "Go to Top" button after scrolling down
+            toTopBtn.style.display = window.scrollY > 300 ? 'block' : 'none';
+        });
+
+        // Scroll to top when button clicked
+        toTopBtn.addEventListener('click', () => {
+            window.scrollTo({ top: 0, behavior: 'smooth' });
+        });
     </script>
 </body>
 </html>
