--- a/index.html
+++ b/index.html
@@ -10,13 +10,21 @@
     <style>
         body {
             font-family: 'Inter', sans-serif;
-            background-color: #000; /* black background to avoid white sides */
+            background-color: #000;
             margin: 0;
             padding: 0;
             color: white;
         }
         header {
             font-family: 'Playfair Display', serif;
+            position: sticky;
+            top: 0;
+            z-index: 50;
+            backdrop-filter: blur(10px);
+            background: rgba(0, 0, 0, 0.6);
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+            color: #fff;
+            text-shadow: 0 0 5px rgba(255,255,255,0.4);
         }
         .image-container {
             display: flex;
@@ -31,12 +39,19 @@
             background-color: #111;
             border-radius: 8px;
             box-shadow: 0 4px 12px rgba(0,0,0,0.4);
+            opacity: 0;
+            transform: translateY(20px);
+            transition: all 0.6s ease-out;
+        }
+        .image-container img.loaded {
+            opacity: 1;
+            transform: translateY(0);
         }
         #toTopBtn {
             position: fixed;
             bottom: 20px;
             right: 20px;
-            background: #444;
+            background: rgba(68, 68, 68, 0.9);
             color: white;
             border: none;
             padding: 10px 15px;
@@ -45,6 +60,10 @@
             font-size: 18px;
             display: none;
             box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+            transition: background 0.3s ease;
+        }
+        #toTopBtn:hover {
+            background: rgba(100, 100, 100, 1);
         }
         #counter {
             position: fixed;
@@ -54,12 +73,13 @@
             padding: 5px 10px;
             border-radius: 5px;
             font-size: 14px;
+            z-index: 60;
         }
     </style>
 </head>
 <body>
     <!-- Header -->
-    <header class="text-center text-4xl font-bold py-6 bg-black shadow-lg">Jiya Vegad</header>
+    <header class="text-center text-4xl font-bold py-4">Jiya Vegad</header>
 
     <!-- Page counter -->
     <div id="counter">1 of 52</div>
@@ -86,12 +106,13 @@
             gallery.appendChild(img);
         }
 
-        // Lazy load
+        // Lazy load with animation
         const lazyLoad = (entries, observer) => {
             entries.forEach(entry => {
                 if (entry.isIntersecting) {
                     const img = entry.target;
                     img.src = img.dataset.src;
+                    img.onload = () => img.classList.add('loaded');
                     observer.unobserve(img);
                 }
             });
