--- a/index.html
+++ b/index.html
@@ -5,18 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jiya Vegad</title>
     <script src="https://cdn.tailwindcss.com"></script>
-
-    <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Great+Vibes&display=swap" rel="stylesheet">
-
-    <!-- Styles -->
+    <!-- Italiana Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Italiana&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Header -->
-    <header id="mainHeader" class="text-center text-4xl font-bold py-4">
-        <span class="header-text">Jiya Vegad</span>
-    </header>
+    <header class="site-header text-center text-4xl font-bold py-4">Jiya Vegad</header>
 
     <!-- Page counter -->
     <div id="counter">1 of 52</div>
@@ -26,6 +21,10 @@
 
     <!-- Go to Top Button -->
     <button id="toTopBtn">&#8679;</button>
+
+    <script src="script.js"></script>
+</body>
+</html>
 
     <!-- Script -->
     <script src="script.js" defer></script>
